# tracr

./: .example.env  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
job_configs/: example.yaml
scripts/: start_vllm_server.sh
tests/: test_cli.py  test_config.py  test_elo_manager.py  test_gpu.py  test_input_discovery.py  test_job_configs.py  test_job_dismiss.py  test_job_id.py  test_job_outputs.py  test_metadata_stats.py  test_openai_client.py  test_output_layout.py  test_pdf_tools.py  test_provider_presets.py  test_web_routes.py
tracr/: __init__.py  __main__.py  cli.py  web_server.py
tracr/app/: __init__.py  api.py
tracr/core/: __init__.py  config.py  input_discovery.py  job_configs.py  models.py  output_layout.py  pdf_tools.py  provider_presets.py
tracr/runtime/: __init__.py  elo_manager.py  gpu.py  job_manager.py  openai_client.py  vllm_manager.py
tracr/tui/: app.py  common.py  service_client.py
tracr/tui/screens/: __init__.py  job_runs.py  launch_wizard.py  output_viewer.py  outputs_browser.py
tracr/web/: page_elo.py  page_shell.py  page_viewer.py  routes.py
